--- a/composition/portfolio_dashboard/templates/index.html
+++ b/composition/portfolio_dashboard/templates/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>Portfolio Dashboard</title>
     <link rel="stylesheet" href="static/css/theme.css"/>
-    <link rel="stylesheet" href="static/css/main.css"/>
-    <link rel="stylesheet" href="static/css/performance.css"/>
-    <link rel="stylesheet" href="static/css/allocation.css"/>
-    <link rel="stylesheet" href="static/css/activity.css"/>
+    <link rel="stylesheet" href="static/css/global.css"/>
+    <link rel="stylesheet" href="static/css/layout.css"/>
   </head>
   </head>
   <body>
@@ -46,6 +44,7 @@
       </facetframe>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="static/js/form-components.js"></script>
     <script type="module" src="static/js/app.js"></script>
     <script type="module" src="static/js/performance.js"></script>
     <script type="module" src="static/js/allocation.js"></script>
